--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -67,21 +67,23 @@
 
 
     <TextView
+        android:id="@+id/tvPlayCom"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:id="@+id/tvPlayCom"
         android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvInviRan"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
         android:background="@drawable/test_btn"
-        android:gravity="center"
         android:backgroundTint="@color/light_yellow"
+        android:gravity="center"
         android:text="@string/auto"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:drawableLeftCompat="@drawable/ic_play" />
+        android:visibility="gone"
+        app:drawableLeftCompat="@drawable/ic_play"
+        app:layout_constraintTop_toBottomOf="@+id/tvInviRan"
+        tools:layout_editor_absoluteX="40dp" />
+
     <Button
+        android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/light_yellow"
