--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,11 +17,11 @@
         android:layout_marginTop="150dp"
         android:layout_marginEnd="20dp"
         android:hint="@string/mail"
-        app:hintTextColor="@color/white"
         app:counterEnabled="true"
-        app:counterMaxLength="20"
+        app:counterMaxLength="50"
         app:counterTextColor="@color/gray"
         app:endIconMode="clear_text"
+        app:hintTextColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,10 +29,10 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtInputEditTextCreateUsername"
-            android:background="@color/gray"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLength="20" />
+            android:background="@color/gray"
+            android:maxLength="50" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!--    password-->
@@ -58,9 +58,10 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtInputEditTextCreatePassword"
-            android:background="@color/gray"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/gray"
+            android:inputType="textPassword"
             android:maxLength="20" />
     </com.google.android.material.textfield.TextInputLayout>
 
