--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_pink"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".Register">
 
-    // logo for our application
+<!--    logo for our application-->
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +34,7 @@
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/game_name"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,15 +48,16 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/text_bg"
         android:backgroundTint="#C4C4C4"
-        android:drawableLeft="@drawable/ic_user"
-        android:hint="Your Email"
+        android:drawableStart="@drawable/ic_user"
+        android:hint="@string/your_email"
+        android:importantForAutofill="no"
         android:inputType="textEmailAddress"
-        android:textColorHint="@color/white"
+        android:textColorHint="#1B5E20"
+        app:layout_constraintBottom_toTopOf="@+id/tvPass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvGame"
-        app:layout_constraintBottom_toTopOf="@+id/tvPass"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvGame" />
 
     <EditText
         android:id="@+id/tvPass"
@@ -55,10 +66,11 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/text_bg"
         android:backgroundTint="#C4C4C4"
-        android:drawableLeft="@drawable/ic_password"
-        android:hint="Password"
+        android:drawableStart="@drawable/ic_password"
+        android:hint="@string/password"
+        android:importantForAutofill="no"
         android:inputType="textPassword"
-        android:textColorHint="@color/white"
+        android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
@@ -70,6 +82,7 @@
         android:layout_marginTop="46dp"
         android:backgroundTint="@color/light_green"
         android:text="@string/login"
+        android:textColor="#5D4037"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPass" />
@@ -81,20 +94,22 @@
         android:layout_marginTop="5dp"
         android:gravity="center"
         android:text="@string/forgot"
+        android:textColor="#00897B"
         android:textSize="18sp"
         android:textStyle="italic|bold"
-        android:textColor="@color/random_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+
     <TextView
         android:id="@+id/tvOr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tvForget"
         android:layout_marginTop="10dp"
-        android:text="---------OR---------"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:text="@string/or"
+        android:textColor="#795548"
+        app:layout_constraintTop_toBottomOf="@+id/tvForget" />
 
     <Button
         android:id="@+id/btnRegister"
@@ -102,8 +117,11 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/light_blue"
         android:text="@string/register"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvOr" />
+        app:layout_constraintTop_toBottomOf="@+id/tvOr"
+        tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
